; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/balancer/extr_least_conn.c_destroy.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/balancer/extr_least_conn.c_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.least_conn_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.least_conn_t*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to i8*
  %6 = bitcast i8* %5 to %struct.least_conn_t*
  store %struct.least_conn_t* %6, %struct.least_conn_t** %3, align 8
  %7 = load %struct.least_conn_t*, %struct.least_conn_t** %3, align 8
  %8 = getelementptr inbounds %struct.least_conn_t, %struct.least_conn_t* %7, i32 0, i32 0
  %9 = call i32 @pthread_mutex_destroy(i32* %8)
  %10 = load %struct.least_conn_t*, %struct.least_conn_t** %3, align 8
  %11 = call i32 @free(%struct.least_conn_t* %10)
  ret void
}

declare dso_local i32 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @free(%struct.least_conn_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
